--- a/programa001.ipynb
+++ b/programa001.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPHdTKuhuveTGhGbi1BHw+O",
+      "authorship_tag": "ABX9TyNx3rUZ2K4x1HAT3rJHcNhY",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -99,13 +99,44 @@
       ]
     },
     {
-      "cell_type": "code",
-      "source": [],
+      "cell_type": "markdown",
+      "source": [
+        "**ATIVIDADE EXEMPLO 2**"
+      ],
       "metadata": {
-        "id": "xgczFa30gcHw"
+        "id": "M-Lh8XyvjYes"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "base = float(input(\"indique o valor da base do triângulo, em metros: \"))\n",
+        "altura = float(input(\"indique o valor da altura do triângulo, em metros: \"))\n",
+        "area = float\n",
+        "\n",
+        "area = (base*altura)/2\n",
+        "\n",
+        "print(\"A área do tirângulo é de\", area, \"m\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "6xm0Eup-jWkE",
+        "outputId": "f6ec8b9f-efd0-41bf-853a-40e79ef37a40"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "indique o valor da base do triângulo, em metros: 8\n",
+            "indique o valor da altura do triângulo, em metros: 16\n",
+            "A área do tirângulo é de 64.0 m\n"
+          ]
+        }
+      ]
     }
   ]
 }
