--- a/programa001.ipynb
+++ b/programa001.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNx3rUZ2K4x1HAT3rJHcNhY",
+      "authorship_tag": "ABX9TyN/SAAyeIFwD/jeblKYgYm9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,7 +37,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "id": "JNAtWYJkdm4O",
         "colab": {
@@ -84,7 +84,7 @@
         "id": "HWuNwTEThsMI",
         "outputId": "4461601e-c1e4-4231-9fb9-ed9a1c365a55"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -125,7 +125,7 @@
         "id": "6xm0Eup-jWkE",
         "outputId": "f6ec8b9f-efd0-41bf-853a-40e79ef37a40"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -137,6 +137,90 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**ATIVIDADE EXEMPLO 3**"
+      ],
+      "metadata": {
+        "id": "gYJRnTzfbmWs"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "pol = float(input(\"Digite o valor em polegadas: \"))\n",
+        "mil = pol*25.4\n",
+        "print(pol, \"polegadas para milimetro é igual a\", mil)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "wCP8e7YwbsYz",
+        "outputId": "d23478ef-6c68-4452-ca48-4b8a9450ba1e"
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Digite o valor em polegadas: 2\n",
+            "2.0 polegadas para milimetro é igual a 50.8\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**EXERCÍCIOS 03/09/2024**"
+      ],
+      "metadata": {
+        "id": "ekFFgXTyc6Ds"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#1\n",
+        "\n",
+        "r = float(input(\"digite o valor do raio:\"))\n",
+        "v1 = 4*3.14159265*r*r*r\n",
+        "v2 = v1/3\n",
+        "print(\"O volume da esfera é:\", v2)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "RZh5Q_4wc5St",
+        "outputId": "2d21a468-891e-4f09-8a6b-cc7debbc181a"
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "digite o valor do raio:5\n",
+            "O volume da esfera é: 523.598775\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#2"
+      ],
+      "metadata": {
+        "id": "ZC8MUyR2jZa0"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
