--- a/programa001.ipynb
+++ b/programa001.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN/SAAyeIFwD/jeblKYgYm9",
+      "authorship_tag": "ABX9TyNHFnLmg0RkBFArwZ0SbGE1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -161,7 +161,7 @@
         "id": "wCP8e7YwbsYz",
         "outputId": "d23478ef-6c68-4452-ca48-4b8a9450ba1e"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -199,7 +199,7 @@
         "id": "RZh5Q_4wc5St",
         "outputId": "2d21a468-891e-4f09-8a6b-cc7debbc181a"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -214,13 +214,51 @@
     {
       "cell_type": "code",
       "source": [
-        "#2"
+        "#2 NÃO SEI ONDE ESTÃO OS EXERCÍCIOS ;-;"
       ],
       "metadata": {
         "id": "ZC8MUyR2jZa0"
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**AULA 10/09/2024**"
+      ],
+      "metadata": {
+        "id": "5nzlDOKweabx"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "num = int(input(\"Digite um número inteiro: \"))\n",
+        "\n",
+        "if num % 2 == 0:\n",
+        "  print(\"O número\", num, \"é par.\")\n",
+        "else:\n",
+        "  print(\"O número\", num, \"é impar\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "pSyBntsQeeSK",
+        "outputId": "4ce0a6b7-ffe6-49e8-e9aa-6d93f4ea9237"
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Digite um número inteiro: 79\n",
+            "O número 79 é impar\n"
+          ]
+        }
+      ]
     }
   ]
 }
