--- a/programa001.ipynb
+++ b/programa001.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNHFnLmg0RkBFArwZ0SbGE1",
+      "authorship_tag": "ABX9TyNWFoZatXKaUjZ0Yj1Ex+W5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -256,6 +256,38 @@
           "text": [
             "Digite um número inteiro: 79\n",
             "O número 79 é impar\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import math\n",
+        "\n",
+        "num = float(input(\"Digite um número: \"))\n",
+        "\n",
+        "if num >= 0:\n",
+        "     raiz_quadrada = math.sqrt(num)\n",
+        "     print(f\"A raiz quadrada de {num} é igual a {raiz_quadrada:.2f}\")#\"f\" é utilizado para formatar a frase, no caso formatamos que entre a frase terá duas variáveis e que a segunda variável terá somente 2 casas decimais ({raiz_quadrada:.2f})\n",
+        "else:\n",
+        "    print(\"Não existe raiz real para esse número\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "fXXj7WBQhWMR",
+        "outputId": "8ded7037-453b-4e1a-ee9c-6a3ba214b288"
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Digite um número: -1\n",
+            "Não existe raiz real para esse número\n"
           ]
         }
       ]
