--- a/programa001.ipynb
+++ b/programa001.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNWFoZatXKaUjZ0Yj1Ex+W5",
+      "authorship_tag": "ABX9TyPZdf4g8cAmP7vnZKMM9FX1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -212,17 +212,6 @@
       ]
     },
     {
-      "cell_type": "code",
-      "source": [
-        "#2 NÃO SEI ONDE ESTÃO OS EXERCÍCIOS ;-;"
-      ],
-      "metadata": {
-        "id": "ZC8MUyR2jZa0"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
       "cell_type": "markdown",
       "source": [
         "**AULA 10/09/2024**"
@@ -288,6 +277,47 @@
           "text": [
             "Digite um número: -1\n",
             "Não existe raiz real para esse número\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "comprimento = float(input(\"Digite o comprimento da camiseta em cm: \"))\n",
+        "largura = float(input(\"Digite a largura da camiseta em cm: \"))\n",
+        "\n",
+        "if comprimento <= 60 and largura <= 45:\n",
+        "    tamanho = \"PP\"\n",
+        "elif comprimento <= 65 and largura <= 48:\n",
+        "    tamanho = \"P\"\n",
+        "elif comprimento <= 70 and largura <= 51:\n",
+        "    tamanho = \"M\"\n",
+        "elif comprimento <= 75 and largura <= 54:\n",
+        "    tamanho = \"G\"\n",
+        "elif comprimento <= 80 and largura <= 57:\n",
+        "    tamanho = \"GG\"\n",
+        "else:\n",
+        "    tamanho = \"XGG\"\n",
+        "\n",
+        "print (f\"O tamanho da camiseta é {tamanho}.\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "DmnAPELrl9kf",
+        "outputId": "d1f78997-6216-4966-8075-7b1c63c70864"
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Digite o comprimento da camiseta em cm: 74\n",
+            "Digite a largura da camiseta em cm: 53.9\n",
+            "O tamanho da camiseta é G.\n"
           ]
         }
       ]
