--- a/programa001.ipynb
+++ b/programa001.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPZdf4g8cAmP7vnZKMM9FX1",
+      "authorship_tag": "ABX9TyP6uWbxymtfKdfK5YFUSZNz",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -235,16 +235,16 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "pSyBntsQeeSK",
-        "outputId": "4ce0a6b7-ffe6-49e8-e9aa-6d93f4ea9237"
+        "outputId": "8fd8b499-a50c-49a7-ec4a-1949cea8640f"
       },
-      "execution_count": 2,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Digite um número inteiro: 79\n",
-            "O número 79 é impar\n"
+            "Digite um número inteiro: 2\n",
+            "O número 2 é par.\n"
           ]
         }
       ]
@@ -267,7 +267,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "fXXj7WBQhWMR",
-        "outputId": "8ded7037-453b-4e1a-ee9c-6a3ba214b288"
+        "outputId": "69248ce3-5806-4594-ca31-88911487cf98"
       },
       "execution_count": 10,
       "outputs": [
@@ -275,8 +275,8 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Digite um número: -1\n",
-            "Não existe raiz real para esse número\n"
+            "Digite um número: 2\n",
+            "A raiz quadrada de 2.0 é igual a 1.41\n"
           ]
         }
       ]
@@ -309,7 +309,7 @@
         "id": "DmnAPELrl9kf",
         "outputId": "d1f78997-6216-4966-8075-7b1c63c70864"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -318,6 +318,140 @@
             "Digite o comprimento da camiseta em cm: 74\n",
             "Digite a largura da camiseta em cm: 53.9\n",
             "O tamanho da camiseta é G.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**AULA 17/09/2024**"
+      ],
+      "metadata": {
+        "id": "DQGQz2XQgtpZ"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#01) Elaborar um programa em python que solicite ao usuário um valor inteiro e em seguida informe ao usuário se o valor é múltiplo de 3 ou não.\n",
+        "num = int(input(\"Digite um valor inteiro: \"))\n",
+        "\n",
+        "if num % 3 == 0:\n",
+        "  print(\"O valor\", num, \"é múltiplo de 3.\")\n",
+        "else:\n",
+        "  print(\"O valor\", num, \"não é multiplo de 3.\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "dTursuhqgzTw",
+        "outputId": "720e4339-43e9-40d5-cf58-855beb6762a5"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Digite um valor inteiro: 87\n",
+            "O valor 87 é múltiplo de 3.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "'''02) Dadas as notas a e b de um aluno, com pesos respectivamente 2 e 3; pede-se elaborar um programa em Python para calcular e exibir a média ponderada do aluno, verificar e informar, junto ao valor da sua média,\n",
+        "se foi aprovado ou não (OBS: Considere aprovado se obtiver média igual ou superior a 5).'''\n",
+        "#Média ponderada = (x1.p1+x2.p2)/p1+p2\n",
+        "\n",
+        "a = float(input(\"Digite a primeira nota para cálculo da média: \"))\n",
+        "b = float(input(\"Digite a segunda nota para cálculo da média: \"))\n",
+        "\n",
+        "s = float\n",
+        "m = float\n",
+        "\n",
+        "s = a*2+b*3\n",
+        "m = s/5\n",
+        "\n",
+        "if m >= 5:\n",
+        "  print(\"O aluno foi aprovado, com média igual a\", m, \".\")\n",
+        "else:\n",
+        "  print(\"O aluno foi reprovado, com média igual a\", m, \".\")\n",
+        "\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ZqwTuyx-mL4X",
+        "outputId": "281bb4ad-facd-4375-8b9e-3eebab781b4a"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Digite a primeira nota para cálculo da média: 5\n",
+            "Digite a segunda nota para cálculo da média: 2\n",
+            "O aluno foi reprovado, com média igual a 3.2 .\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from ast import And\n",
+        "'''03) Dado o algoritmo a seguir, elabore o código python do programa em questão:\n",
+        "Início\n",
+        "  Leia os três valores: a, b e c.\n",
+        "  Compare os valores:\n",
+        "  Se a é menor ou igual a b e a é menor ou igual a c, então\n",
+        "    a é o menor valor.\n",
+        "  Caso contrário, se b é menor ou igual a a e b é menor ou igual a c, então\n",
+        "    b é o menor valor.\n",
+        "  Caso contrário,\n",
+        "    c é o menor valor.\n",
+        "  Exiba o menor valor.\n",
+        "Fim'''\n",
+        "\n",
+        "a = float(input(\"digite o primeiro valor: \"))\n",
+        "b = float(input(\"digite o segundo valor: \"))\n",
+        "c = float(input(\"digite o terceiro valor: \"))\n",
+        "\n",
+        "menor = float\n",
+        "\n",
+        "if a <= b and a < c:\n",
+        "  menor = a\n",
+        "elif b <= a and b < c:\n",
+        "  menor = b\n",
+        "else:\n",
+        "  menor = c\n",
+        "\n",
+        "print(\"o menor valor corresponde a\", menor)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "kDDC-_i6olQQ",
+        "outputId": "79824f61-a0cc-4edd-f9c4-04a0d287cc1e"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "digite o primeiro valor: 2\n",
+            "digite o segundo valor: 2\n",
+            "digite o terceiro valor: 5\n",
+            "o menor valor corresponde a 2.0\n"
           ]
         }
       ]
