--- a/programa001.ipynb
+++ b/programa001.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP6uWbxymtfKdfK5YFUSZNz",
+      "authorship_tag": "ABX9TyNPjDz9uVzUyieQz0sonocQ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -452,6 +452,75 @@
             "digite o segundo valor: 2\n",
             "digite o terceiro valor: 5\n",
             "o menor valor corresponde a 2.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**CONTROLE DE FLUXO**"
+      ],
+      "metadata": {
+        "id": "RrsBqLkGskb6"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for variavel in range(10): #comando para um contador, o número entre parênteses indica o número de contagens, note que termina um dígito antes do valor declarado\n",
+        "  print(variavel)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "fsTYcabPsn5r",
+        "outputId": "cc40b9b0-9349-4787-9fd2-f7bae88f4269"
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0\n",
+            "1\n",
+            "2\n",
+            "3\n",
+            "4\n",
+            "5\n",
+            "6\n",
+            "7\n",
+            "8\n",
+            "9\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for variavel in range(1,8,2): #Nesse caso, o contador conta a cada dois números decimais, iniciando em 1 e terminando em 7\n",
+        "  print(variavel)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Nkx2kdvKtdMb",
+        "outputId": "383d61a2-07ed-4e80-9a71-3a86c523aa04"
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1\n",
+            "3\n",
+            "5\n",
+            "7\n"
           ]
         }
       ]
