--- a/programa001.ipynb
+++ b/programa001.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNPjDz9uVzUyieQz0sonocQ",
+      "authorship_tag": "ABX9TyNB1j+s/FRp+B2pnntXQQGK",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -237,7 +237,7 @@
         "id": "pSyBntsQeeSK",
         "outputId": "8fd8b499-a50c-49a7-ec4a-1949cea8640f"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -269,7 +269,7 @@
         "id": "fXXj7WBQhWMR",
         "outputId": "69248ce3-5806-4594-ca31-88911487cf98"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -478,7 +478,7 @@
         "id": "fsTYcabPsn5r",
         "outputId": "cc40b9b0-9349-4787-9fd2-f7bae88f4269"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -511,7 +511,7 @@
         "id": "Nkx2kdvKtdMb",
         "outputId": "383d61a2-07ed-4e80-9a71-3a86c523aa04"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -521,6 +521,80 @@
             "3\n",
             "5\n",
             "7\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "3oIicTKnikWM"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**AULA 24/09/2024**"
+      ],
+      "metadata": {
+        "id": "IMb5fVc0iiZ9"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**CONTROLE DE LOOP**"
+      ],
+      "metadata": {
+        "id": "NvUrIIiRinzl"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#while = enquanto\n",
+        "\n",
+        "while True: #Tipo o Void loop\n",
+        "\n",
+        "  resposta = input(\"Deseja realizar a soma de 2 variáveis? (S/N): \").strip().upper() #strip upper é caps lock automático\n",
+        "\n",
+        "  if resposta == 'S':\n",
+        "    var1 = float(input(\"Digite o valor da primeira variável: \" ))\n",
+        "    var2 = float(input(\"Digite o valor da segunda variável: \"))\n",
+        "\n",
+        "    soma = var1 + var2\n",
+        "\n",
+        "    print(f\"A soma de {var1} e {var2} é: {soma:.2f}\")\n",
+        "\n",
+        "  elif resposta == 'N':\n",
+        "    print(\"Operação finalizada\")\n",
+        "    break #Finaliza  loop\n",
+        "\n",
+        "  else:\n",
+        "    print(\"Resposta inválida, por favor, digite 'S' para sim e 'N' para não\")\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "kH9ja9FkivIe",
+        "outputId": "ee021047-7b37-4b38-decc-068c63d3924d"
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Deseja realizar a soma de 2 variáveis? (S/N): S\n",
+            "Digite o valor da primeira variável: 1\n",
+            "Digite o valor da segunda variável: 4\n",
+            "A soma de 1.0 e 4.0 é: 5.00\n",
+            "Deseja realizar a soma de 2 variáveis? (S/N): N\n",
+            "Operação finalizada\n"
           ]
         }
       ]
